[package]
name = "eth-jsonrpc-receiver"
version = "0.1.1"
authors = ["Yao Pengfei <yuitta@163.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-jsonrpc-types-internals = { path = "internals" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-serialize = "0.3"
ethereum-types = "0.14"

[dev-dependencies]
bincode = "1.3"
