[package]
name = "eth-jsonrpc-lib"
version = "0.1.1"
authors = ["Yao Pengfei <yuitta@163.com>"]
description = "ethereuem jsonrpc relayer library"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-jsonrpc-types-internals = { path = "internals", version = "0.1" }
web3 = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1"
rustc-serialize = "0.3"
ethereum-types = "0.14"
cita_cloud_proto = '6.7.0'
protobuf = "=2.8.1"
rand = "0.8"
rlp = "0.5"
keccak-hash = "0.10"
cita-tool = "0.21"
parity-util-mem = "0.12"

[dev-dependencies]
bincode = "1.3"
rustc-hex = "2.0"
